Kustomize/apps/serviceB/serviceB-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceB
  name: serviceb-cluster-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: serviceB
  type: ClusterIP
