Kustomize/apps/serviceB/serviceB-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceB
  name: serviceb-nodeport-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 32002
  selector:
    app: serviceB
  type: NodePort
